--- a/Resources/Maps/_NF/Shuttles/eagle.yml
+++ b/Resources/Maps/_NF/Shuttles/eagle.yml
@@ -2064,7 +2064,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 0.5,9.5
       parent: 1
-- proto: ChemDispenser
+- proto: ChemDispenserEmpty
   entities:
   - uid: 208
     components:
