--- a/Resources/Maps/_NF/Shuttles/stasis.yml
+++ b/Resources/Maps/_NF/Shuttles/stasis.yml
@@ -1870,7 +1870,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 20.5,9.5
       parent: 1
-- proto: ChemDispenser
+- proto: ChemDispenserEmpty
   entities:
   - uid: 520
     components:
@@ -3175,8 +3175,6 @@ entities:
       pos: 23.5,-2.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 419
     - type: AtmosPipeColor
@@ -3188,8 +3186,6 @@ entities:
       pos: 20.5,-6.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 419
     - type: AtmosPipeColor
@@ -3223,8 +3219,6 @@ entities:
       pos: 14.5,0.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 419
     - type: AtmosPipeColor
@@ -3246,8 +3240,6 @@ entities:
       pos: 20.5,9.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 556
     - type: AtmosPipeColor
@@ -3259,8 +3251,6 @@ entities:
       pos: 21.5,2.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 419
     - type: AtmosPipeColor
@@ -3296,8 +3286,6 @@ entities:
       pos: 21.5,1.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 419
     - type: AtmosPipeColor
@@ -3309,8 +3297,6 @@ entities:
       pos: 22.5,-6.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 419
     - type: AtmosPipeColor
@@ -3322,8 +3308,6 @@ entities:
       pos: 22.5,5.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 556
     - type: AtmosPipeColor
@@ -3334,8 +3318,6 @@ entities:
       pos: 21.5,9.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 556
     - type: AtmosPipeColor
@@ -3347,8 +3329,6 @@ entities:
       pos: 15.5,0.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 419
     - type: AtmosPipeColor
@@ -3392,8 +3372,6 @@ entities:
       pos: 23.5,-3.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 419
     - type: AtmosPipeColor
