--- a/Resources/Maps/_NF/Shuttles/apothecary.yml
+++ b/Resources/Maps/_NF/Shuttles/apothecary.yml
@@ -1393,7 +1393,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: -1.5,8.5
       parent: 1
-- proto: ChemDispenser
+- proto: ChemDispenserEmpty
   entities:
   - uid: 341
     components:
@@ -2018,8 +2018,6 @@ entities:
       pos: -3.5,6.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
@@ -2030,8 +2028,6 @@ entities:
       pos: -2.5,9.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
@@ -2043,8 +2039,6 @@ entities:
       pos: 3.5,-2.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
@@ -2056,8 +2050,6 @@ entities:
       pos: -2.5,-2.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
@@ -2069,8 +2061,6 @@ entities:
       pos: -1.5,1.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
@@ -2084,8 +2074,6 @@ entities:
       pos: -2.5,-0.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
@@ -2097,8 +2085,6 @@ entities:
       pos: 1.5,-3.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
     - type: AtmosPipeColor
       color: '#990000FF'
   - uid: 325
@@ -2107,8 +2093,6 @@ entities:
       pos: -0.5,9.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
@@ -2120,8 +2104,6 @@ entities:
       pos: -1.5,2.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
@@ -2133,8 +2115,6 @@ entities:
       pos: 4.5,-2.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
@@ -2146,8 +2126,6 @@ entities:
       pos: -1.5,6.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 34
     - type: AtmosPipeColor
