--- a/Resources/Prototypes/_NF/Shipyard/akupara.yml
+++ b/Resources/Prototypes/_NF/Shipyard/akupara.yml
@@ -10,8 +10,8 @@
 # hi
 - type: vessel
   id: Akupara
-  name: UW Akupara
-  description: A medium full-feature botanical research biodome equipped to help a botanist fully interact with their plants in almost any way conceivable.
+  name: UW Акупара
+  description: Полнофункциональный шаттл для ботанических исследований среднего размера, оборудованный для того, чтобы помочь ботаникам полностью взаимодействовать со своими растениями.
   price: 50000 #~41500
   category: Medium
   group: Shipyard
@@ -22,7 +22,7 @@
 
 - type: gameMap
   id: Akupara
-  mapName: 'Akupara'
+  mapName: 'Акупара'
   mapPath: /Maps/_NF/Shuttles/akupara.yml
   minPlayers: 0
   stations:
@@ -30,7 +30,7 @@
       stationProto: StandardFrontierVessel
       components:
         - type: StationNameSetup
-          mapNameTemplate: 'Akupara {1}'
+          mapNameTemplate: 'Акупара {1}'
           nameGenerator:
             !type:NanotrasenNameGenerator
             prefixCreator: '14'
