--- a/Resources/Prototypes/_NF/Shipyard/bookworm.yml
+++ b/Resources/Prototypes/_NF/Shipyard/bookworm.yml
@@ -10,7 +10,7 @@
 #
 - type: vessel
   id: Bookworm
-  name: SBB Буквоед
+  name: SBB Книжный червь
   description: Среднегабаритный космический источник знаний. Рекомендованный состав команды 1-3 человека.
   price: 28000
   category: Medium
@@ -22,7 +22,7 @@
 
 - type: gameMap
   id: Bookworm
-  mapName: 'SBB Буквоед'
+  mapName: 'SBB Книжный червь'
   mapPath: /Maps/_NF/Shuttles/bookworm.yml
   minPlayers: 0
   stations:
@@ -30,7 +30,7 @@
       stationProto: StandardFrontierVessel
       components:
         - type: StationNameSetup
-          mapNameTemplate: 'Буквоед {1}'
+          mapNameTemplate: 'Книжный червь {1}'
           nameGenerator:
             !type:NanotrasenNameGenerator
             prefixCreator: '14'
