--- a/Resources/Prototypes/Corvax/Shipyard/Aurora.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Aurora.yml
@@ -2,11 +2,13 @@
 - type: vessel
   id: Aurora
   name: NC Аврора
-  description: Корабль среднего класса, располагает всеми удобствами обычной станции NanoTrasen, рекомендуется для 4-8 игроков.
-  price: 108000
+  description: Корабль среднего класса, располагает всеми удобствами обычной станции NanoTrasen, рекомендуется для команды из 4-8 человек.
+  price: 130000
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/Corvax/Shuttles/Aurora.yml
+  class:
+  - Civilian
 
 - type: gameMap
   id: Aurora
