Replace sec signs with NFSD

--- a/Resources/Maps/_NF/Shuttles/Nfsd/interceptor.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/interceptor.yml
@@ -1617,7 +1617,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: -3.5,0.5
       parent: 1
-- proto: SignSec
+- proto: SignNfsd
   entities:
   - uid: 89
     components:
@@ -1632,13 +1632,11 @@ entities:
   - uid: 172
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
       pos: -2.5,-5.5
       parent: 1
   - uid: 173
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
       pos: 1.5,-5.5
       parent: 1
 - proto: SmokingPipeFilledTobacco
