cards, bullets, ame jar

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/caseless_rifle.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/caseless_rifle.yml
@@ -8,6 +8,8 @@
     tags:
       - Cartridge
       - CartridgeCaselessRifle
+      - Trash # Frontier
+      - Recyclable # Frontier
   - type: CartridgeAmmo
     deleteOnSpawn: true
   - type: Sprite
