--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/heavy_rifle.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/heavy_rifle.yml
@@ -8,6 +8,8 @@
     tags:
       - Cartridge
       - CartridgeHeavyRifle
+      - Trash # Frontier
+      - Recyclable # Frontier
   - type: CartridgeAmmo
     proto: BulletHeavyRifle
   - type: Sprite
