--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/magnum.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/magnum.yml
@@ -8,6 +8,8 @@
     tags:
       - Cartridge
       - CartridgeMagnum
+      - Trash # Frontier
+      - Recyclable # Frontier
   - type: CartridgeAmmo
     proto: BulletMagnum
   - type: Sprite
