--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/pistol.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/pistol.yml
@@ -8,6 +8,8 @@
     tags:
       - Cartridge
       - CartridgePistol
+      - Trash # Frontier
+      - Recyclable # Frontier
   - type: CartridgeAmmo
     proto: BulletPistol
   - type: Sprite
