--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/rifle.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/rifle.yml
@@ -8,6 +8,8 @@
     tags:
       - Cartridge
       - CartridgeRifle
+      - Trash # Frontier
+      - Recyclable # Frontier
   - type: CartridgeAmmo
     proto: BulletRifle
   - type: Sprite
