--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/base_cartridge.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/base_cartridge.yml
@@ -30,6 +30,8 @@
   - type: Tag
     tags:
     - Cartridge
+    - Trash # Frontier
+    - Recyclable # Frontier
   - type: Item
     size: Tiny
   - type: SpaceGarbage
