--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/light_rifle.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/light_rifle.yml
@@ -8,6 +8,8 @@
     tags:
     - Cartridge
     - CartridgeLightRifle
+    - Trash # Frontier
+    - Recyclable # Frontier
   - type: CartridgeAmmo
     proto: BulletLightRifle
   - type: Sprite
