--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/shotgun.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/shotgun.yml
@@ -8,6 +8,8 @@
     tags:
     - Cartridge
     - ShellShotgun
+    - Trash # Frontier
+    - Recyclable # Frontier
   - type: CartridgeAmmo
     soundEject:
       collection: ShellEject
