--- a/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
+++ b/Resources/Prototypes/EstacaoPirata/Entities/Objects/Misc/cards.yml
@@ -32,7 +32,7 @@
     price: 200 # Frontier
 
 - type: entity
-  parent: BaseItem
+  parent: [BaseItem, RecyclableItemNoMats] # Frontier: added RecyclableItemNoMats
   id: CardHandBase
   categories: [ HideSpawnMenu ]
   name: hand of cards
@@ -54,7 +54,7 @@
     price: 0.01 # Frontier
 
 - type: entity
-  parent: BaseItem
+  parent: [BaseItem, RecyclableItemNoMats] # Frontier: added RecyclableItemNoMats
   id: CardDeckBase
   categories: [ HideSpawnMenu ]
   name: deck of cards
