--- a/Resources/Maps/_NF/Shuttles/Nfsd/wendigo.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/wendigo.yml
@@ -768,6 +768,20 @@ entities:
     - type: Transform
       pos: 9.5,4.5
       parent: 1
+- proto: BaseAdvancedPen
+  entities:
+  - uid: 471
+    components:
+    - type: Transform
+      rot: -28.27433388230815 rad
+      pos: -1.3030288,-3.779652
+      parent: 1
+  - uid: 472
+    components:
+    - type: Transform
+      rot: -21.991148575128555 rad
+      pos: 2.3636386,-3.758803
+      parent: 1
 - proto: Bed
   entities:
   - uid: 148
@@ -1140,16 +1154,6 @@ entities:
     components:
     - type: Transform
       pos: -2.5,-0.5
-      parent: 1
-  - uid: 241
-    components:
-    - type: Transform
-      pos: -0.5,-1.5
-      parent: 1
-  - uid: 242
-    components:
-    - type: Transform
-      pos: 1.5,-1.5
       parent: 1
   - uid: 243
     components:
@@ -2232,6 +2236,20 @@ entities:
       parent: 1
     - type: Physics
       bodyType: Static
+- proto: Paper
+  entities:
+  - uid: 128
+    components:
+    - type: Transform
+      rot: -9.42477796076938 rad
+      pos: 2.5719714,-3.6232934
+      parent: 1
+  - uid: 421
+    components:
+    - type: Transform
+      rot: -9.42477796076938 rad
+      pos: -1.5634453,-3.696261
+      parent: 1
 - proto: PaperBin20
   entities:
   - uid: 171
@@ -2288,6 +2306,30 @@ entities:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 3.5,3.5
+      parent: 1
+  - uid: 131
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 2.5,-0.5
+      parent: 1
+  - uid: 132
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 3.5,-0.5
+      parent: 1
+  - uid: 133
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -1.5,-0.5
+      parent: 1
+  - uid: 134
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -2.5,-0.5
       parent: 1
 - proto: PortableGeneratorSuperPacmanShuttle
   entities:
@@ -2429,32 +2471,6 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 0.5,4.5
-      parent: 1
-- proto: ReinforcedWindow
-  entities:
-  - uid: 128
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 3.5,-0.5
-      parent: 1
-  - uid: 132
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 2.5,-0.5
-      parent: 1
-  - uid: 135
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -2.5,-0.5
-      parent: 1
-  - uid: 136
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -1.5,-0.5
       parent: 1
 - proto: ShuttersNormalOpen
   entities:
@@ -3088,6 +3104,61 @@ entities:
     - type: Transform
       pos: 4.5,2.5
       parent: 1
+  - uid: 135
+    components:
+    - type: Transform
+      pos: -0.5,-0.5
+      parent: 1
+  - uid: 136
+    components:
+    - type: Transform
+      pos: -3.5,-1.5
+      parent: 1
+  - uid: 137
+    components:
+    - type: Transform
+      pos: 4.5,-1.5
+      parent: 1
+  - uid: 138
+    components:
+    - type: Transform
+      pos: 4.5,-0.5
+      parent: 1
+  - uid: 185
+    components:
+    - type: Transform
+      pos: -3.5,-0.5
+      parent: 1
+  - uid: 241
+    components:
+    - type: Transform
+      pos: 1.5,-0.5
+      parent: 1
+  - uid: 242
+    components:
+    - type: Transform
+      pos: -1.5,2.5
+      parent: 1
+  - uid: 256
+    components:
+    - type: Transform
+      pos: 0.5,2.5
+      parent: 1
+  - uid: 299
+    components:
+    - type: Transform
+      pos: 0.5,5.5
+      parent: 1
+  - uid: 360
+    components:
+    - type: Transform
+      pos: -0.5,5.5
+      parent: 1
+  - uid: 395
+    components:
+    - type: Transform
+      pos: -0.5,2.5
+      parent: 1
 - proto: WallPlastitaniumDiagonal
   entities:
   - uid: 8
@@ -3192,72 +3263,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 6.5,2.5
       parent: 1
-- proto: WallReinforced
-  entities:
   - uid: 130
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -0.5,-0.5
-      parent: 1
-  - uid: 131
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -3.5,-1.5
-      parent: 1
-  - uid: 133
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 4.5,-1.5
-      parent: 1
-  - uid: 134
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 4.5,-0.5
-      parent: 1
-  - uid: 137
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -3.5,-0.5
-      parent: 1
-  - uid: 138
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 1.5,-0.5
-      parent: 1
-  - uid: 256
-    components:
-    - type: Transform
-      pos: -1.5,2.5
-      parent: 1
-  - uid: 299
-    components:
-    - type: Transform
-      pos: 0.5,2.5
-      parent: 1
-  - uid: 360
-    components:
-    - type: Transform
-      pos: 0.5,5.5
-      parent: 1
-  - uid: 395
-    components:
-    - type: Transform
-      pos: -0.5,5.5
-      parent: 1
-  - uid: 421
-    components:
-    - type: Transform
-      pos: -0.5,2.5
-      parent: 1
-- proto: WallReinforcedDiagonal
-  entities:
-  - uid: 185
     components:
     - type: Transform
       rot: 3.141592653589793 rad
