Add some NFSD insignia to the ship's exterior

--- a/Resources/Maps/_NF/Shuttles/Nfsd/hospitaller.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/hospitaller.yml
@@ -1025,6 +1025,18 @@ entities:
     - type: Transform
       pos: -1.5,5.5
       parent: 1
+- proto: SignNfsd
+  entities:
+  - uid: 178
+    components:
+    - type: Transform
+      pos: 3.5,-2.5
+      parent: 1
+  - uid: 179
+    components:
+    - type: Transform
+      pos: -2.5,-2.5
+      parent: 1
 - proto: SmallGyroscopeNfsd
   entities:
   - uid: 79
